fix: allow all origins in CORS to fix 403 from Vercel frontend